--- a/style.css
+++ b/style.css
@@ -9,15 +9,20 @@
 
 body {
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
   background: rgba(0, 0, 0, 0.92);
   color: white;
   font-family: "Open Sans", sans-serif;
+  height: 100vh;
 }
 
 a {
   text-decoration: none;
   color: white;
+}
+
+.show {
+  display: flex !important;
 }
 
 .ribbon {
@@ -38,11 +43,13 @@ a {
 }
 
 .container {
-  margin: 30px auto 0 auto;
-  min-height: 90vh;
+  margin: 0 auto;
+  height: calc(100vh - 40px);
+  padding-top: 30px; 
   display: flex;
   flex-direction: column;
   max-width: 1200px;
+  position: relative;
 }
 
 .section {
@@ -81,6 +88,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
+  max-height: 100%;
 }
 
 .item {
@@ -88,8 +96,12 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 15px 0;
+  margin: 0;
   min-width: 300px;
+}
+
+.item .current-value {
+  display: none;
 }
 
 .share {
@@ -142,6 +154,14 @@ a {
   margin: 3px;
 }
 
+.color.editor {
+  background-color: #4D368A;
+}
+
+.color.viewer {
+  background-color: #01AAEA;
+}
+
 .color__list [type="radio"]:checked + label::before {
   display: block;
   position: relative;
@@ -171,5 +191,51 @@ a {
   }
   .container {
     flex-direction: row;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    height: auto;
+  }
+
+  .customize {
+    margin-bottom: 20px;
+  }
+
+  .title {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+  }
+
+  .item {
+    position: relative;
+    align-items: flex-start;
+    padding-left: 10%;
+  }
+
+  .item:first-child {
+    flex: 0 0 100%;
+  }
+
+  .item .current-value {
+    display: flex;
+  }
+
+  .item .current-value.shape {
+    width: 40px;
+    height: 40px;
+  }
+
+  .item .pick__list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    z-index: 131231;
+  }
+
+  .item .shape__list {
+    background-color: black;
   }
 }
