Use sdk property values as classes. Separate properties update logic

--- a/style.css
+++ b/style.css
@@ -148,11 +148,11 @@ a {
   margin: 0 10px;
 }
 
-.circle {
+.round {
   border-radius: 50%;
 }
 
-.square-rounded {
+.rounded {
   border-radius: 10px;
 }
 
