--- a/style.css
+++ b/style.css
@@ -1,196 +1,196 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
-  -moz-osx-font-smoothing: grayscale !important;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-rendering: optimizeLegibility !important;
+	-webkit-font-smoothing: antialiased !important;
+	-moz-osx-font-smoothing: grayscale !important;
 }
 
 body {
-  font-size: 18px;
-  font-weight: 400;
-  background: rgba(0, 0, 0, 0.92);
-  color: white;
-  font-family: "Open Sans", sans-serif;
-  height: 100vh;
+	font-size: 18px;
+	font-weight: 400;
+	background: rgba(0, 0, 0, 0.92);
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	height: 100vh;
 }
 
 a {
-  text-decoration: none;
-  color: white;
+	text-decoration: none;
+	color: white;
 }
 
 /*
  * Use the 'attach-chat' class to configure the ATTACH embed with the same name.
  */
 .attach-chat {
-  width: 100%;
-  height: 400px;
-  flex: 2;
+	width: 100%;
+	height: 400px;
+	flex: 2;
 }
 
 @media (min-width: 769px) {
-  .attach-chat {
-    height: auto;
-    min-height: 400px;
-  }
+	.attach-chat {
+		height: auto;
+		min-height: 400px;
+	}
 }
 
 @media (max-width: 590px) {
-  .attach-chat {
-    height: 300px;
-  }
+	.attach-chat {
+		height: 300px;
+	}
 }
 
 .show {
-  display: flex !important;
+	display: flex !important;
 }
 
 .disclaimer {
-  text-align: right;
-  line-height: 40px;
-  min-height: 40px;
-  display: block;
-  padding: 0 5px;
+	text-align: right;
+	line-height: 40px;
+	min-height: 40px;
+	display: block;
+	padding: 0 5px;
 }
 .disclaimer a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .container {
-  margin: 0 auto;
-  height: calc(100vh - 40px);
-  padding-top: 30px;
-  display: flex;
-  flex-direction: column;
-  max-width: 1200px;
-  position: relative;
+	margin: 0 auto;
+	height: calc(100vh - 40px);
+	padding-top: 30px;
+	display: flex;
+	flex-direction: column;
+	max-width: 1200px;
+	position: relative;
 }
 
 .section {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
-[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  width: 0;
-  height: 0;
+[type='radio'] {
+	position: absolute;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
 
-[type="radio"]:checked + label::before {
-  display: block;
-  position: relative;
-  content: " ";
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>');
-  background-size: 30px 30px;
-  height: 30px;
-  width: 30px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+[type='radio']:checked + label::before {
+	display: block;
+	position: relative;
+	content: ' ';
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>');
+	background-size: 30px 30px;
+	height: 30px;
+	width: 30px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .title {
-  color: white;
-  font-weight: 400;
-  padding: 20px 0;
-  font-size: 16px;
+	color: white;
+	font-weight: 400;
+	padding: 20px 0;
+	font-size: 16px;
 }
 
 .customize {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1;
-  max-height: 100%;
-  flex-direction: column;
-  justify-content: flex-start;
+	display: flex;
+	flex-wrap: wrap;
+	flex: 1;
+	max-height: 100%;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-  min-width: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0;
+	min-width: 300px;
 }
 
 .item .picker-value {
-  display: none;
+	display: none;
 }
 
 .share {
-  padding: 50px 0;
-  align-items: center;
-  flex-direction: column;
-  flex: 1;
+	padding: 50px 0;
+	align-items: center;
+	flex-direction: column;
+	flex: 1;
 }
 
 .icon__codepen {
-  height: 120px;
-  width: 120px;
-  margin: 0 auto;
-  display: block;
+	height: 120px;
+	width: 120px;
+	margin: 0 auto;
+	display: block;
 }
 
 .shape__list {
-  display: flex;
+	display: flex;
 }
 
 .shape {
-  cursor: pointer;
-  height: 55px;
-  width: 55px;
-  background-color: white;
-  margin: 0 10px;
+	cursor: pointer;
+	height: 55px;
+	width: 55px;
+	background-color: white;
+	margin: 0 10px;
 }
 
 .round {
-  border-radius: 50%;
+	border-radius: 50%;
 }
 
 .rounded {
-  border-radius: 10px;
+	border-radius: 10px;
 }
 
 .color__list {
-  background-color: white;
-  display: flex;
-  width: 236px;
-  min-height: 190px;
-  flex-wrap: wrap;
-  padding: 3px;
+	background-color: white;
+	display: flex;
+	width: 236px;
+	min-height: 190px;
+	flex-wrap: wrap;
+	padding: 3px;
 }
 
 .color {
-  cursor: pointer;
-  height: 40px;
-  width: 40px;
-  margin: 3px;
+	cursor: pointer;
+	height: 40px;
+	width: 40px;
+	margin: 3px;
 }
 
 .color.editor {
-  background-color: #4D368A;
+	background-color: #4d368a;
 }
 
 .color.viewer {
-  background-color: #01AAEA;
+	background-color: #01aaea;
 }
 
-.color__list [type="radio"]:checked + label::before {
-  display: block;
-  position: relative;
-  content: " ";
-  background-image: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>');
-  background-size: 30px 30px;
-  height: 30px;
-  width: 30px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.color__list [type='radio']:checked + label::before {
+	display: block;
+	position: relative;
+	content: ' ';
+	background-image: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>');
+	background-size: 30px 30px;
+	height: 30px;
+	width: 30px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 /* Github corner styles */
@@ -206,19 +206,22 @@ a {
 }
 
 .github-corner:hover .octo-arm {
-  animation:octocat-wave 560ms ease-in-out
+	animation: octocat-wave 560ms ease-in-out;
 }
 
 @keyframes octocat-wave {
-  0%,100%{
-    transform:rotate(0)
-  }
-  20%,60%{
-    transform:rotate(-25deg)
-  }
-  40%,80%{
-    transform:rotate(10deg)
-  }
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	20%,
+	60% {
+		transform: rotate(-25deg);
+	}
+	40%,
+	80% {
+		transform: rotate(10deg);
+	}
 }
 
 @media (max-width: 1200px) {
@@ -236,165 +239,161 @@ a {
 }
 
 @media (min-width: 769px) {
-
-  .container {
-    flex-direction: row;
-  }
+	.container {
+		flex-direction: row;
+	}
 }
 
 @media (max-width: 768px) {
-  body {
-    height: auto;
-  }
+	body {
+		height: auto;
+	}
 
-  .container {
-    height: auto;
-  }
+	.container {
+		height: auto;
+	}
 
-  .customize {
-    margin-bottom: 20px;
-    max-width: calc(100% - 149px);
-    flex-direction: row;
-  }
+	.customize {
+		margin-bottom: 20px;
+		max-width: calc(100% - 149px);
+		flex-direction: row;
+	}
 
-  .title {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-  }
+	.title {
+		display: flex;
+		align-items: center;
+		padding: 10px 0;
+	}
 
-  .item {
-    position: relative;
-    align-items: flex-start;
-    padding-left: 10%;
-    display: inline-flex;
-    min-width: 100px;
-    flex: 1;
-  }
+	.item {
+		position: relative;
+		align-items: flex-start;
+		padding-left: 10%;
+		display: inline-flex;
+		min-width: 100px;
+		flex: 1;
+	}
 
-  .item:first-child {
-    flex: 0 0 100%;
-    align-items: center;
-  }
+	.item:first-child {
+		flex: 0 0 100%;
+		align-items: center;
+	}
 
-  .item .picker-value {
-    display: flex;
-    margin-left: 8px;
-  }
+	.item .picker-value {
+		display: flex;
+		margin-left: 8px;
+	}
 
-  .item .picker-value.shape,
-  .item .picker-value.color {
-    width: 40px;
-    height: 40px;
-    min-width: 40px;
-  }
+	.item .picker-value.shape,
+	.item .picker-value.color {
+		width: 40px;
+		height: 40px;
+		min-width: 40px;
+	}
 
-  .item .pick__list {
-    display: none;
-    position: absolute;
-    top: 100%;
-    z-index: 131231;
-    padding: 4px 0;
-  }
+	.item .pick__list {
+		display: none;
+		position: absolute;
+		top: 100%;
+		z-index: 131231;
+		padding: 4px 0;
+	}
 
-  .item .shape__list {
-    background-color: #ffffff;
-    z-index: 123123;
-  }
+	.item .shape__list {
+		background-color: #ffffff;
+		z-index: 123123;
+	}
 
-  .item .shape__list:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.89);
-    z-index: -1;
-  }
+	.item .shape__list:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		background-color: rgba(0, 0, 0, 0.89);
+		z-index: -1;
+	}
 }
 
 @media (max-width: 590px) {
+	.github-corner:hover .octo-arm {
+		animation: none;
+	}
 
-  .github-corner:hover .octo-arm{
-    animation:none
-  }
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out;
+	}
 
-  .github-corner .octo-arm{
-    animation:octocat-wave 560ms ease-in-out
-  }
+	.customize {
+		max-width: calc(100% - 120px);
+	}
 
-  .customize {
-    max-width: calc(100% - 120px);
-  }
+	.title {
+		font-size: 16px;
+	}
 
-  .title {
-    font-size: 16px;
-  }
+	.title span {
+		min-width: 178px;
+	}
 
-  .title span {
-    min-width: 178px;
-  }
+	.item {
+		flex: 0 0 100%;
+		padding-left: 15px;
+	}
 
-  .item {
-    flex: 0 0 100%;
-    padding-left: 15px;
-  }
+	.item:first-child {
+		align-items: flex-start;
+	}
 
-  .item:first-child {
-    align-items: flex-start;
-  }
+	.item:last-child {
+		flex: 0 0 100%;
+		padding-left: 15px;
+	}
 
-  .item:last-child {
-    flex: 0 0 100%;
-    padding-left: 15px;
-  }
+	.item .pick__list {
+		left: 20%;
+	}
 
-  .item .pick__list {
-    left: 20%;
-  }
+	.share {
+		padding: 20px 0 10px;
+	}
 
-  .share {
-    padding: 20px 0 10px;
-  }
-
-  .share img {
-    height: 90px;
-    width: 90px;
-  }
-
+	.share img {
+		height: 90px;
+		width: 90px;
+	}
 }
 
 @media (max-width: 330px) {
-  .title span {
-    min-width: 144px;
-  }
+	.title span {
+		min-width: 144px;
+	}
 
-  .customize {
-    max-width: calc(100% - 110px);
-  }
+	.customize {
+		max-width: calc(100% - 110px);
+	}
 
-  .item .pick__list {
-    right: 0px;
-  }
+	.item .pick__list {
+		right: 0px;
+	}
 }
 
 @media all and (max-height: 700px) {
-  .shape {
-    height: 40px;
-    width: 40px;
-    min-height: 40px;
-  }
+	.shape {
+		height: 40px;
+		width: 40px;
+		min-height: 40px;
+	}
 
-  .color {
-    height: 34px;
-    width: 34px;
-  }
+	.color {
+		height: 34px;
+		width: 34px;
+	}
 
-  .color__list {
-    display: flex;
-    width: 210px;
-    min-height: 160px;
-  }
-
+	.color__list {
+		display: flex;
+		width: 210px;
+		min-height: 160px;
+	}
 }
