--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ a {
 }
 
 .item {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -395,5 +396,35 @@ a {
 		display: flex;
 		width: 210px;
 		min-height: 160px;
+	}
+}
+
+@media all and (max-height: 630px) and (min-width: 768px) {
+	.item:not(:first-child) .picker-value {
+		display: flex;
+		margin-left: 8px;
+	}
+
+	.item .picker-value.color {
+		width: 40px;
+		height: 40px;
+		min-width: 40px;
+	}
+
+	.item:not(:first-child) .pick__list {
+		display: none;
+		position: absolute;
+		top: 100%;
+		z-index: 131231;
+		padding: 4px 0;
+	}
+
+	.item:not(:first-child) .title {
+		display: flex;
+		align-items: center;
+	}
+
+	.item:not(:first-child):not(:last-child) .title {
+		margin-top: 20px;
 	}
 }
